# n-base-sandbox

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md
application/: main.c
drivers/uart/: uart.c  uart.h
modules/debug/: debug.c  debug.h
